# Chatbot-Sample

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  README_CONTAINER.md  cleanup_data.py  docker-compose.prod.yml  docker-compose.yml  test_comprehensive_chat.py  test_message_debug.py  test_message_grouping.py  test_message_history_api.py  test_websocket.py  test_websocket_auth.py  test_websocket_complete.py  test_websocket_errors.py
backend/: Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  channels.py  messages.py  users.py  workspaces.py
backend/app/core/: config.py  database.py  exceptions.py  middleware.py  security.py
backend/app/models/: base.py  channel.py  file.py  message.py  user.py  workspace.py
backend/app/repositories/: base.py  channel_repository.py  message_repository.py  user_repository.py  workspace_repository.py
backend/app/schemas/: auth.py  channel.py  common.py  message.py  user.py  workspace.py
backend/app/services/: auth_service.py  channel_service.py  message_service.py  workspace_service.py
backend/app/websocket/: __init__.py  endpoints.py  handler.py  manager.py
backend/scripts/: init_db.sql  seed_data.py
backend/tests/: conftest.py  test_auth.py  test_channels.py  test_main.py  test_workspaces.py
doc/: api_specification.md  backend_setup.md  basic_design.md  database_design.md  detailed_design.md  frontend_setup.md  requirements.md
frontend/: .env.local.example  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: setupTests.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: MessageInput.tsx  MessageList.tsx
frontend/src/components/ui/: Button.tsx  (+3 more)
frontend/src/hooks/: useAuth.ts  useChannel.ts  useWorkspace.ts
frontend/src/lib/: api.ts  apiClient.ts  theme.ts
frontend/src/stores/: authStore.ts  channelStore.ts  workspaceStore.ts
frontend/src/types/: auth.ts  channel.ts  global.d.ts  index.ts  jest.d.ts  message.ts  workspace.ts
frontend/src/utils/: format.ts  index.ts  validation.ts  websocket.ts
scripts/: dev.sh
(+6 files in other folders)
